compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__functions__function_call_incorrect_arity_with_labels_fault_tolerance.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\nfn wibble(wibble arg1: fn() -> Int, wobble arg2: Int) -> Int {\n  arg1() + arg2\n}\n\npub fn main() {\n  wibble(wobble: \"\")\n}\n"
---
error: Incorrect arity
  ┌─ /src/one/two.rakun:7:3
  │
7 │   wibble(wobble: "")
  │   ^^^^^^^^^^^^^^^^^^ Expected 2 arguments, got 1

This call accepts these additional labelled arguments:

  - wibble
